# word_counter

./: Cargo.toml  README.md  poem.txt
src/: lib.rs  main.rs
