[package]
name = "word_counter"
version = "0.3.0"
authors = ["Tasnim Alam <tasnimalamcse@gmail.com>"]
description = "A program that displays word count of a file."
repository = "https://github.com/tasnimAlam/word_counter"
keywords = ["word", "counter", "word_counter", "cli"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
prettytable-rs = "^0.8"
